--- a/style.css
+++ b/style.css
@@ -75,7 +75,8 @@ html, body {
     margin-top: 53px;
     font-size: 20px;
     list-style: none;
-    padding-left: 5px
+    padding-left: 5px;
+    cursor: pointer;
 }
 
 #menuBtn, #closeMenuBtn {
@@ -90,12 +91,11 @@ html, body {
     bottom: 100px
 }
 
-#menuBtn:hover, #closeMenuBtn:hover {
+#menuBtn:hover, #closeMenuBtn:hover, #reqs:hover {
     transform: scale(1.1)
 }
 
 #links {
-    transition: 0.4s;
     position: relative;
     left: 1150px;
     bottom: 110px;
@@ -110,4 +110,17 @@ html, body {
     position: relative;
     right: 343px;
     margin-bottom: 20px
+}
+
+#reqs {
+    background-color: green;
+    width: 500px;
+    height: 200px;
+    border-radius: 4px;
+    transition: 0.4s;
+    cursor: pointer;
+    position: relative;
+    left: 400px;
+    font-size: 50px;
+    top: 200px
 }
