--- a/style.css
+++ b/style.css
@@ -133,7 +133,197 @@ html, body {
     cursor: pointer;
     transition: 0.4s;
     font-weight: bold;
-    position: relative;
-    left: 870px;
     margin-top: 30px
+}
+
+#screen2 {
+    position: relative;
+    top: 30px
+}
+
+#screen {
+    position: relative;
+    left: 550px
+}
+
+@media screen and (max-width: 1200px) {
+    #menuBtn, #closeMenuBtn {
+        background-color: green;
+        width: 140px;
+        height: 50px;
+        border-radius: 4px;
+        transition: 0.4s;
+        cursor: pointer;
+        position: relative;
+        left: 500px;
+        bottom: 100px
+    }
+
+    #links {
+        position: relative;
+        left: 640px;
+        bottom: 100px
+    }
+
+}
+
+@media screen and (max-width: 500px) {
+    #menuBtn, #closeMenuBtn {
+        background-color: green;
+        width: 140px;
+        height: 50px;
+        border-radius: 4px;
+        transition: 0.4s;
+        cursor: pointer;
+        position: relative;
+        left: 100px;
+        bottom: 100px
+    }
+
+    #links {
+        position: relative;
+        left: 250px;
+        bottom: 110px;
+    }
+        #shotInput {
+            position: relative;
+            left: 360px;
+            top: 40px
+        }
+    
+        #screen {
+            position: relative;
+            left: 520px;
+            top: 40px;
+        }
+    
+        #screen2 {
+            position: relative;
+            left: 300px;
+            top: 60px;
+        }
+        
+        #logo {
+            position: relative;
+            left: 50px
+        }
+    }
+
+    @media screen and (max-width: 250px) {
+    #menuBtn, #closeMenuBtn {
+        background-color: green;
+        width: 140px;
+        height: 50px;
+        border-radius: 4px;
+        transition: 0.4s;
+        cursor: pointer;
+        position: relative;
+        left: -100px;
+        bottom: 20px
+    }
+
+    #links {
+        position: relative;
+        left: 50px;
+        bottom: 30px;
+    }
+
+    #ignInput{
+        background-color: darkgreen;
+        width: 300px;
+        height: 50px;
+        margin-top: 10px;
+        border-radius: 4px;
+        font-size: 20px;
+        position: relative;
+        right: 40px
+    }
+
+    #logo {
+        position: relative;
+        left: 70px
+    }
+
+    #tagText {
+        position: relative;
+        top: 30px;
+        left: 30px
+    }
+
+    #shotInput {
+        position: relative;
+        left: 300px;
+        top: 40px
+    }
+
+    #screen {
+        position: relative;
+        left: 380px;
+        top: 40px;
+    }
+
+    #screen2 {
+        position: relative;
+        left: 350px;
+        top: 60px;
+    }
+
+}
+
+@media screen and (max-width: 1056px) {
+    #menuBtn, #closeMenuBtn {
+        background-color: green;
+        width: 140px;
+        height: 50px;
+        border-radius: 4px;
+        transition: 0.4s;
+        cursor: pointer;
+        position: relative;
+        left: 400px;
+        bottom: 100px
+    }
+
+    #links {
+        position: relative;
+        left: 540px;
+    }
+
+    #screen {
+        position: relative;
+        left: 650px
+    }
+
+    #screen2 {
+        position: relative;
+        left: 40vh
+    }
+    #shotInput {
+        position: relative;
+        left: 58vh
+    }
+}
+
+@media screen and (max-width: 1366px) {
+    #menuBtn, #closeMenuBtn {
+        background-color: green;
+        width: 140px;
+        height: 50px;
+        border-radius: 4px;
+        transition: 0.4s;
+        cursor: pointer;
+        position: relative;
+        left: 1000px;
+        bottom: 100px
+    }
+
+    #links {
+        position: relative;
+        left: 1140px;
+    }
+
+    #screen2 {
+        position: relative;
+        left: 60vh;
+        top: 40px
+    }
 }
