--- a/style.css
+++ b/style.css
@@ -77,6 +77,11 @@ html, body {
     list-style: none;
     padding-left: 5px;
     cursor: pointer;
+    padding-left: 4px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+    padding-right: 10px
 }
 
 #menuBtn, #closeMenuBtn {
@@ -103,12 +108,12 @@ html, body {
 
 #tag {
     position: relative;
-    right: 32px
+    left: 705px
 }
 
 #shot {
     position: relative;
-    right: 343px;
+    left: 80px;
     margin-bottom: 20px
 }
 
@@ -125,7 +130,7 @@ html, body {
     top: 200px
 }
 
-#check {
+#check, .submit {
     background-color: darkgreen;
     width: 200px;
     height: 50px;
@@ -133,7 +138,9 @@ html, body {
     cursor: pointer;
     transition: 0.4s;
     font-weight: bold;
-    margin-top: 30px
+    margin-top: 30px;
+    position: relative;
+    left: 850px
 }
 
 #screen2 {
@@ -144,4 +151,9 @@ html, body {
 #screen {
     position: relative;
     left: 550px
+}
+
+#ign {
+    position: relative;
+    left: 770px
 }
